--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+Critical_habitat\DFO_SARA_CritHab_22\DFO_SARA_CritHab_22_WGS84.gpkg filter=lfs diff=lfs merge=lfs -text
+Protected_areas\CPCAD_Dec_2021_WGS84.gpkg filter=lfs diff=lfs merge=lfs -text
+Watershed_Layers\CE_WSHDs_WGS84_v2.gpkg filter=lfs diff=lfs merge=lfs -text
